--- a/index.html
+++ b/index.html
@@ -5,13 +5,35 @@
 <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 
 <script>
+var width = 300,
+    height = 300,
+    radius = Math.min(width, height) / 2 - 30;
+
 var hpdata = new Array();
 
 d3.tsv('hpraw.csv')
   .row(function(d) { hpdata.push(d); })
   .get();
 
-console.log(hpdata);
+var r = d3.scale.linear()
+  .domain([0, 100])
+  .range([0, radius]);
+
+var svg = d3.select('#colorwheel').append('svg')
+  .attr('width', width)
+  .attr('height', height)
+  .append('g')
+  attr('transform', 'translate(' + width/2 + ',' + height/2 + ')');
+
+var gr = svg.append('g')
+  .attr('class', 'r axis')
+  .selectAll('g')
+  .data(r.ticks(5).slice(1))
+  .enter().append('g');
+
+gr.append('circle')
+  .attr('r', r);
+
 </script>
 
 </head>
