--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ var svg = d3.select('#colorwheel').append('svg')
   .attr('width', width)
   .attr('height', height)
   .append('g')
-  attr('transform', 'translate(' + width/2 + ',' + height/2 + ')');
+  .attr('transform', 'translate(' + width/2 + ',' + height/2 + ')');
 
 var gr = svg.append('g')
   .attr('class', 'r axis')
