--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 
-<script>
+<script defer='true'>
 var width = 300,
     height = 300,
     radius = Math.min(width, height) / 2 - 30;
