--- a/index.html
+++ b/index.html
@@ -48,20 +48,29 @@ var r = d3.scale.linear()
   .domain([0, 100])
   .range([0, radius]);
 
-var svg = d3.select('#colorwheel').append('svg')
-  .attr('width', width)
-  .attr('height', height)
-  .append('g')
-  .attr('transform', 'translate(' + width/2 + ',' + height/2 + ')');
+var svg, gr;
+function setupSVG() {
+  svg = d3.select('#colorwheel')
+    .append('svg')
+    .attr('width', width)
+    .attr('height', height)
+    .append('g')
+    .attr('transform', 'translate(' + width/2 + ',' + height/2 + ')');
 
-var gr = svg.append('g')
-  .attr('class', 'r axis')
-  .selectAll('g')
-  .data(r.ticks(5).slice(1))
-  .enter().append('g');
+  gr = svg.append('g')
+    .attr('class', 'r axis')
+    .selectAll('g')
+    .data(r.ticks(5).slice(1))
+    .enter().append('g');
 
-gr.append('circle')
-  .attr('r', r);
+  gr.append('circle')
+    .attr('r', r);
+}
+
+function myOnload() {
+  setupSVG();
+}
+window.onload = myOnload;
 
 </script>
 
