--- a/index.html
+++ b/index.html
@@ -67,6 +67,20 @@ function setupSVG() {
     .attr('r', r);
 }
 
+var pts;
+function drawSelected() {
+  pts = svg.append('g')
+    .attr('class', 'colpts')
+    .selectAll('g')
+    .data(hpdata)
+    .enter()
+    .append('g');
+  pts.append('circle')
+    .attr('r', 2)
+    .attr('cx', function (d) { return Math.cos(d.HA)*d.VR; })
+    .attr('cy', function (d) { return Math.sin(d.HA)*d.VR; });
+}
+
 function myOnload() {
   console.log('myOnload')
   setupSVG();
