--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@ function drawSelected() {
   pts.append('circle')
     .attr('r', 2)
     .attr('cx', function (d) { return Math.cos(d.HA)*d.VR; })
-    .attr('cy', function (d) { return Math.sin(d.HA)*d.VR; });
+    .attr('cy', function (d) { return Math.sin(d.HA)*d.VR; })
+    .style('fill', d3.hsl(d.HA, 1.0, d.VR/100.0).toString());
 }
 
 function myOnload() {
