--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ function drawSelected() {
     .attr('r', 25)
     .attr('cx', function (d) { return Math.cos(d.HA)*d.VR; })
     .attr('cy', function (d) { return Math.sin(d.HA)*d.VR; })
-    .style('fill', d3.hsl(d.HA, 1.0, d.VR/100.0).toString());
+    .style('fill', function(d) { return d3.hsl(d.HA, 1.0, d.VR/100.0).toString(); });
 }
 
 function myOnload() {
