--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@ function drawSelected() {
     .append('g');
   pts.append('circle')
     .attr('r', 2)
-    .attr('cx', function (d) { return Math.cos(d.HA)*d.VR; })
-    .attr('cy', function (d) { return Math.sin(d.HA)*d.VR; })
+    .attr('cx', function (d) { return Math.cos(d.HA*2*Math.PI/360)*d.VR; })
+    .attr('cy', function (d) { return Math.sin(d.HA*2*Math.PI/360)*d.VR; })
     .style('fill', function(d) { return d3.hsl(d.HA, 1.0, d.VR/100.0).toString(); });
 }
 
