--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ function setupSVG() {
   gr.append('circle')
     .attr('r', r);
 
-  svg.onclick = drawSelected;
+  d3.select('#colorwheel').append('p').text('Draw').onclick = drawSelected;
 }
 
 var pts;
@@ -93,6 +93,7 @@ function drawSelected() {
     .attr('cx', function (d) { return Math.cos(d.HA*2*Math.PI/360)*d.VR; })
     .attr('cy', function (d) { return Math.sin(d.HA*2*Math.PI/360)*d.VR; })
     .style('fill', function(d) { return d3.hsl(d.HA, 1.0, d.VR/100.0).toString(); });
+  console.log('clicked');
 }
 
 function myOnload() {
