--- a/index.html
+++ b/index.html
@@ -113,7 +113,10 @@ window.onload = myOnload;
 <div id="colorwheel">
 </div>
 <div id="colorseldiv">
-    <select id="colorselect" multiple>
+    <input type="text" id="colorselected" list="colorselect" />
+    <datalist id="colorselect">
+    <ul id="selectedcolors">
+    </ul>
     </select>
 </div>
 
