--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@ window.onload = myOnload;
 <div id="colorseldiv">
     <input type="text" id="colorselected" list="colorselect" />
     <datalist id="colorselect">
+    </datalist>
     <ul id="selectedcolors">
     </ul>
     </select>
