--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
 <div id="colorwheel">
 </div>
 <div id="colorseldiv">
-    <input type="text" id="colorselected" list="colorselect" />
-    <datalist id="colorselect">
-    </datalist>
+    <select id="colorselect" multiple>
+    </select>
+</div>
+<div id="selectedsdiv">
     <ul id="selectedcolors">
     </ul>
 </div>
