--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 <div id="colorwheel">
 </div>
 <div id="colorseldiv">
-    <select id="colorselect" multiple>
+    <select id="colorselect">
     </select>
 </div>
 <div id="selectedsdiv">
-    <ul id="selectedcolors">
+    <ul id="selectedcolors" onclick='deselected'>
     </ul>
 </div>
 
