--- a/index.html
+++ b/index.html
@@ -43,12 +43,8 @@
 <div id="colorwheel">
 </div>
 <div id="colorseldiv">
-    <select id="colorselect">
+    <select id="colorselect" multiple>
     </select>
-</div>
-<div id="selectedsdiv">
-    <ul id="selectedcolors" onclick='deselected'>
-    </ul>
 </div>
 
 <hr>
