--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <div id="colorwheel">
 </div>
 <div id="colorseldiv">
-    <select id="colorselect" multiple>
+    <select id="colorselect" multiple onchange='drawSelected()'>
     </select>
 </div>
 
