--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
 <div id="colorwheel">
 </div>
 <div id="colorseldiv">
+    <p>
+    Sort by: 
+    <a href="#" onclick='resort("PAINT - MARKETING NAME")'>marketing name</a> : 
+    <a href="#" onclick='resort("PIGMENT - CHEMICAL NAME")'>chemical name</a> : 
+    <a href="#" onclick='resort("PIGMENT - C.I. NAME")'>pigment code</a> : 
+    <a href="#" onclick='resort("MANUFACTURER")'>manufacturer</a> : 
+    <a href="#" onclick='resort("HA")'>hue angle</a>
+    </p>
     <select id="colorselect" multiple onchange='drawSelected()'>
     </select>
 </div>
