--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
   stroke: red;
   stroke-width: 1.5px;
 }
+
+#colorwheel { 
+    float: left;
+}
+#colorseldiv {
+    float: left;
+}
 </style>
 
 <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
