--- a/index.html
+++ b/index.html
@@ -30,11 +30,8 @@
   stroke-width: 1.5px;
 }
 
-#colorwheel { 
-    float: left;
-}
 #colorseldiv {
-    float: left;
+    float: right;
 }
 </style>
 
