--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
 #colorseldiv {
     float: right;
 }
+#footer {
+    clear: both;
+}
+
 </style>
 
 <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
@@ -59,7 +63,7 @@
     </select>
 </div>
 
-<hr>
+<hr id="footer">
 <address></address>
 <!-- hhmts start -->Last modified: Sat Dec 20 13:38:52 CET 2014 <!-- hhmts end -->
 </body> </html>
